<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@color/white"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_model_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/model_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_model_dollar_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/dollar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_model_name" />


    <TextView
        android:id="@+id/tv_model_som_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/som"

        app:layout_constraintStart_toEndOf="@id/tv_model_dollar_price"
        app:layout_constraintTop_toBottomOf="@id/tv_model_name" />

    <TextView
        android:id="@+id/tv_body_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/body_type"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_model_dollar_price" />

    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/volume"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_body_type"
        app:layout_constraintTop_toBottomOf="@id/tv_body_type" />

    <TextView
        android:id="@+id/tv_drive_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/drive_type"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_volume"
        app:layout_constraintTop_toBottomOf="@id/tv_volume" />

    <TextView
        android:id="@+id/tv_gearbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/gearbox"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_drive_type"
        app:layout_constraintTop_toBottomOf="@id/tv_drive_type" />

    <TextView
        android:id="@+id/tv_steering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/steering"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_gearbox"
        app:layout_constraintTop_toBottomOf="@id/tv_gearbox" />

    <TextView
        android:id="@+id/tv_millage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/millage"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_steering"
        app:layout_constraintTop_toBottomOf="@id/tv_steering" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_es2019"
        app:layout_constraintBottom_toBottomOf="@id/tv_millage"
        app:layout_constraintEnd_toStartOf="@id/tv_body_type"
        app:layout_constraintStart_toStartOf="@id/tv_model_dollar_price"
        app:layout_constraintTop_toBottomOf="@id/tv_model_dollar_price" />

</androidx.constraintlayout.widget.ConstraintLayout>